# luckfox-cmake-base

./: CMakeLists.txt  README.md  hello.cpp
